WIP on main: 41854fb Merge branch 'main' of https://github.com/tpktehnoco-byte/MakeUpWeb

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     --font-body: 'Lato', sans-serif;
     /* Body Font */
 
-    --container-width: 800px;
+    --container-width: 1000px;
     /* Max width for content containers */
     --border-radius: 8px;
     /* Border radius for buttons and cards */
@@ -308,6 +308,7 @@ section h2 {
 }
 
 .about-image {
+    width: 100%;
     height: 400px;
     background-size: cover;
     background-position: center;
