--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ header.scrolled {
 
 nav {
     display: flex;
+	
     justify-content: space-between;
     align-items: center;
     max-width: var(--container-width);
@@ -196,6 +197,7 @@ nav a.active {
     font-weight: 200;
     margin: 0;
     line-height: 1.2;
+	text-aling: center;
     letter-spacing: 0.8rem;
     padding: 0 3rem;
 }
@@ -279,7 +281,7 @@ section h2 {
 .cta-button {
     display: inline-block;
     margin-top: 15rem;
-    padding: 1rem 25px;
+    padding: 1rem;
     background-color: var(--text-color);
     color: var(--accent-color);
     text-decoration: none;
@@ -302,7 +304,7 @@ section h2 {
 
 .about-section-enhanced .container {
     max-width: var(--container-width);
-    margin: 0 auto;
+    margin: 1rem auto;
 
 }
 
@@ -315,7 +317,7 @@ section h2 {
 
 .about-image {
     width: 100%;
-    height: 400px;
+    height: 800px;
     background-size: cover;
     background-position: center;
     border-radius: var(--border-radius);
@@ -678,6 +680,8 @@ footer .expertise-list li i {
 /* --- 8. Responsive Design --- */
 @media (max-width: 992px) {
     .about-grid {
+		display: flex;
+		flex-direction: row;
         grid-template-columns: 1fr;
         gap: 3rem;
     }
@@ -691,7 +695,8 @@ footer .expertise-list li i {
     .about-image {
         height: 400px;
         max-width: 500px;
-        margin: 0 auto;
+        margin: 2rem auto;
     }
 }
+
 
